# helix

./: .dockerignore  .drone.yml  .env.example  .env.example-prod  .gitignore  .gitleaksignore  .golangci.yml  .hydra-resolved.docker-compose.dev.yaml  .swp  .test_runner_token  AGENT_TYPE_IMPLEMENTATION.md  AI_AGENT_SECURITY_IMPLEMENTATION.md  ARCHITECTURE_HF_TOKENS.md  ARCHITECTURE_QUICK_REFERENCE.md  BIDIRECTIONAL_SYNC_ANALYSIS.md  BUG_REPORT.txt  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.cli  Dockerfile.demos  Dockerfile.gptscript  Dockerfile.gptscript_devserver  Dockerfile.hyprland-helix  Dockerfile.hyprland-wolf  Dockerfile.hyprland-wolf-zed  Dockerfile.kde-helix  Dockerfile.keycloak  Dockerfile.keycloak-bitnami  Dockerfile.labwc-helix  Dockerfile.lint  Dockerfile.qwen-build  Dockerfile.qwen-code-build  Dockerfile.runner  Dockerfile.runner.dockerignore  Dockerfile.sandbox  Dockerfile.sway-helix  Dockerfile.sway-helix.dockerignore  (+170 more)
.github/: dependabot.yml  secret_scanning.yml
.helix/: startup.sh
.playwright-mcp/: page-2026-04-14T11-18-07-880Z.yml  page-2026-04-14T11-18-22-536Z.yml  page-2026-04-14T11-18-42-946Z.yml  page-2026-04-15T08-27-23-741Z.yml  page-2026-04-15T08-33-17-803Z.yml
api/: main.go
cog/: cog-0.0.1.dev-py3-none-any.whl  helix_cog_wrapper.py  requirements.txt
config-temp/: qemu-conf.c
demos/: README.md  jobvacancy.go  main.go  products.go  saleslead.go  utils.go
design/: 2025-01-02-rbac-authorization-audit.md  2025-01-07-haystack-rag-integration.md  2025-01-18-cursor-go-pipewire.md  2025-09-04-COMPLETE_IMPLEMENTATION_WITH_UI.md  2025-09-08-EXTERNAL_AGENT_STATUS_FINAL.md  2025-09-08-EXTERNAL_ZED_AGENT_SETUP.md  2025-09-08-external-agent-protocol-implementation-status.md  2025-09-20-BIDIRECTIONAL_SYNC_ANALYSIS.md  2025-10-07-IMPLEMENTATION_COMPLETE.md  2025-10-07-wolf-ui-info.txt  2025-10-08-BROWSER_MOONLIGHT_STREAMING.md  2025-10-08-KNOWN_ISSUES.md  2025-10-09-GIT_DOCUMENT_HANDOFF_WORKFLOW.md  2025-10-10-DIAGNOSIS_COMPLETE.md  2025-10-15-AGENT_HANDOFF_KICKOFF_APPROACH.md  2025-10-15-EXTERNAL_AGENT_STREAMING_RESUME_FINDINGS.md  2025-10-20-prod-external-agents-not-starting.md  2025-10-21-merge-quick-reference.md  2025-10-21-prod-zed-websocket-freeze-investigation.md  2025-10-21-upstream-main-merge-analysis.md  2025-10-22-FINAL-RESULTS.md  2025-10-22-websocket-sync-fix-summary.md  2025-10-22-websocket-testing-methodology.md  2025-10-23-black-screen-regression-fix.md  2025-10-23-evp-decrypt-architectural-solution.md  2025-10-23-kickoff-certificate-restriction.md  2025-10-23-moonlight-decryption-errors-debug.md  2025-10-23-rollback-summary.md  2025-10-23-spectask-helix-agent-integration.md  2025-10-24-integration-test-ci-validation.md  2025-10-25-wolf-lobbies-mode-live-stream.md  2025-10-25-wolf-ui-upstream-upgrade.md  2025-10-27-hyprland-ags-build-setup.md  2025-10-27-wolf-lobbies-pairing-lifecycle.md  2025-10-28-hostnotpaired-debugging.md  2025-10-28-wolf-lobby-hostnotpaired-fix.md  2025-10-28-wolf-lobby-reconnection-issue.md  2025-10-29-dev-working-state-before-rebuild.md  2025-10-29-wolf-lobbies-reconnect-investigation.md  2025-10-29-wolf-moonlight-web-pairing-architecture.md  (+447 more)
desktop/gst-pipewire-zerocopy/: Cargo.toml  build.rs
desktop/gst-pipewire-zerocopy/src/: ext_image_copy_capture.rs  gl_blit.rs  lib.rs  metrics.rs  pipewire_stream.rs  sync_timeline.rs  wlr_export_dmabuf.rs  wlr_screencopy.rs
desktop/gst-pipewire-zerocopy/src/pipewiresrc/: imp.rs  mod.rs
desktop/gst-vsockenc/: gstvsockenc.c  gstvsockenc.h  meson.build
desktop/wayland-display-core/: Cargo.toml  build.rs
desktop/wayland-display-core/src/: lib.rs
desktop/wayland-display-core/src/comp/: focus.rs  input.rs  mod.rs  rendering.rs
desktop/wayland-display-core/src/tests/: client.rs  device.rs  fixture.rs  mod.rs  test_pointer.rs
desktop/wayland-display-core/src/utils/: mod.rs  target.rs  video_info.rs
desktop/wayland-display-core/src/utils/allocator/: mod.rs
desktop/wayland-display-core/src/utils/allocator/cuda/: ffi.rs  mod.rs
desktop/wayland-display-core/src/utils/device/: gpu.rs  mod.rs
desktop/wayland-display-core/src/utils/renderer/: mod.rs
desktop/wayland-display-core/src/wayland/handlers/: compositor.rs  data_device.rs  dmabuf.rs  pointer_constraints.rs  relative_pointer.rs  seat.rs  wl_drm.rs  xdg.rs
desktop/wayland-display-core/src/wayland/protocols/: wl_drm.rs
docs/: MOONLIGHT_PAIRING_SOLUTION.md  WEBSOCKET_PROTOCOL_DESIGN.md  ZED_HELIX_INTEGRATION_ARCHITECTURE.md  adding-new-code-desktops.md  adding-ubuntu-desktop.md  apps-router.md  config.toml  data-entities.md  (+19 more)
for-mac/qemu-helix/: README-QEMU-BUILD.md  README.md  build-qemu-only.sh  build-qemu-standalone.sh  fix-qemu-paths.sh  helix-frame-export.c  helix-frame-export.h  meson.build
gnome-wolf-bridge/: .gitignore  README.md  eis-input.c  gnome-wolf-bridge.h  main.c  meson.build  pipewire-stream.c  portal-screencast.c  screencast.c  wayland-client.c
haystack_service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
haystack_service/app/: __init__.py  api.py  config.py  converters.py  embedders.py  service-image.py  service.py  service_image.py  settings.py  splitters.py  unix_socket_embedders.py
haystack_service/app/vectorchord/: test.py
haystack_service/app/vectorchord/components/: __init__.py  embedding_retriever.py  image_splitter.py  keyword_retriever.py
haystack_service/app/vectorchord/document_store/: __init__.py  document_store.py  filters.py
haystack_service/tests/: README.md  __init__.py  api_process_image_test.py  converters_test.py  debug_unix_socket.py  embedders_test.py  run_tests.py  service_image_test.py  service_test.py  splitters_tests.py  test_api_process.py  test_unix_socket_embedders.py
haystack_service/tests/document_store/: document_store_test.py
runner/helix-diffusers/: README.md  main.py  pyproject.toml  test_main.py
wolf-bridge-rs/: Cargo.toml
wolf-bridge-rs/src/: gnome_screencast.rs  main.rs  pipewire_stream.rs  portal.rs  wayland.rs
(+7094 files in other folders)
