[package]
name = "wolf-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridge desktop screen-cast to Wolf's Wayland compositor via PipeWire"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# XDG Desktop Portal (universal: GNOME, KDE, Sway) - for interactive mode
ashpd = { version = "0.9", features = ["tokio"] }

# D-Bus (for direct GNOME/KDE API - headless mode without user interaction)
zbus = { version = "4", features = ["blocking"] }

# Wayland client
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# PipeWire
pipewire = "0.8"
libspa = "0.8"

# DRM formats
drm-fourcc = "2.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# Unix-specific
nix = { version = "0.28", features = ["fs", "mman"] }

[profile.release]
lto = true
strip = true
