[package]
name = "gst-plugin-pipewire-zerocopy"
version = "0.1.1"  # Force rebuild: set_active + 30s timeout
edition = "2021"
license = "MIT"
description = "GStreamer PipeWire source with zero-copy GPU buffer handling"
repository = "https://github.com/games-on-whales/wolf"

[dependencies]
# GStreamer bindings
gst = { version = "0.23.2", package = "gstreamer", features = ["v1_24"] }
gst-base = { version = "0.23.2", package = "gstreamer-base", features = ["v1_24"] }
gst-video = { version = "0.23.2", package = "gstreamer-video", features = ["v1_24"] }
gstreamer-allocators = "0.23"

# PipeWire bindings
pipewire = "0.8"
libspa = "0.8"

# Reuse CUDA/EGL allocator (vendored from games-on-whales/gst-wayland-display)
waylanddisplaycore = { path = "../wayland-display-core", package = "wayland-display-core", features = ["cuda"] }

# smithay for Dmabuf type - MUST match waylanddisplaycore's version exactly
smithay = { git = "https://github.com/games-on-whales/smithay", rev = "a166cf4c94b5aedc332a65aa1dd753e8148829c3", default-features = false, features = ["backend_drm", "backend_egl"] }

# Utilities
tracing = "0.1"
once_cell = "1.17"
parking_lot = "0.12"
libc = "0.2"

[lib]
name = "gstpipewirezerocopy"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.8"

[features]
default = ["cuda"]
cuda = []
capi = []  # Required for cargo-c/cinstall

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0"
