[project]
name = "helix-diffusers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.1.1",
    "diffusers>=0.31.0",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "protobuf>=5.28.3",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]